Fixed Safari layout bug

--- a/src/components/layout/robot/robot.css
+++ b/src/components/layout/robot/robot.css
@@ -1,9 +1,17 @@
 .robot-container {
   background-color: rgb(35, 35, 51);
-  display: flex;
-  flex-direction: column;
-  flex: 2;
+  width: 100%;
   /* background-color: red; */
+}
+
+@media screen and (min-width: 769px) {
+  .robot-container {
+    background-color: rgb(35, 35, 51);
+    display: flex;
+    flex-direction: column;
+    flex: 2;
+    /* background-color: red; */
+  }
 }
 
 .mobile-options-menu {
@@ -126,10 +134,11 @@
 .video-canvas {
   display: flex;
   width: calc(100%);
-  min-height: 56.25%; /* 16:9 aspect ratio lock */
+  /* min-height: 56.25%;  16:9 aspect ratio lock */
+  min-height: calc(16 / 9 * 100%);
   top: 0;
   bottom: 0;
-  z-index: 1;
+  z-index: 5;
 }
 
 .video-poster {
@@ -149,7 +158,7 @@
   height: 30%;
   align-self: flex-end;
   flex-direction: row-reverse;
-  z-index: 1;
+  z-index: 5;
   /* background-color: red; */
 }
 
